--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<!-- text will be display on browser tab -->
+	<title>Monster Island Extreme</title>
+	<!-- link style.css to this html file -->
+	<link rel="stylesheet" type="text/css" href="./resources/css/style.css">
 </head>
+
 <body>
-	<!--All content elements in body block-->
+
+	<!-- the full screen game container div -->
+	<div class="game_wrapper titleScreen full_bg_img" style="background-image: url(./resources/media/images/opening.jpg);">
+
+		<!-- div for title in the center of the page -->
+	
+
+		<!-- div for button that go to the question.html -->
+		<div class="button_div">
+
+			<!-- a element will link to the target page -->
+			<a href="scenario.html">
+				<img src = "./resources/media/images/playbutton.png" style="width:85px;height:85px;border:0">
+			</a>
+
+		</div>
+		
+	</div>
 
 </body>
 </html>
