changes to button

--- a/deeper.html
+++ b/deeper.html
@@ -22,7 +22,7 @@
 			<p> Go in the abandoned house</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="wolf.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="beachmaterial2.html">
