--- a/forestdeeper.html
+++ b/forestdeeper.html
@@ -22,7 +22,7 @@
 			<p> Explore the mushrooms</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="lizard.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id="buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="forestmaterial2.html">
