--- a/left.html
+++ b/left.html
@@ -22,7 +22,7 @@
 			<p>Climb the palm trees</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="beachmaterial.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="nothing.html">
