--- a/deeper3.html
+++ b/deeper3.html
@@ -22,7 +22,7 @@
 			<p> Go explore the beach again </p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove2"> 
 
 			<!-- a element will link to the target page -->
 			<a href="beachmaterial4.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="chick.html">
