--- a/forestdeeper3.html
+++ b/forestdeeper3.html
@@ -22,7 +22,7 @@
 			<p> Swing on the vines</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="forestmaterial4.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove">
 
 			<!-- a element will link to the target page -->
 			<a href="werewolf.html">
