--- a/hyena.html
+++ b/hyena.html
@@ -22,7 +22,7 @@
 			<p> run away... like a coward</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="beachmaterial3.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="deeper2.html">
