--- a/serpent.html
+++ b/serpent.html
@@ -22,7 +22,7 @@
 			<p> Beg the snake to spare you</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="dead4.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id="buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="forestdeeper2.html">
