--- a/werewolf.html
+++ b/werewolf.html
@@ -22,7 +22,7 @@
 			<p> Do I want rabies? No</p>
 	
 		</div>
-		<div class="bluebutton_div">
+		<div class="bluebutton_div"id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="nothing4.html">
@@ -30,7 +30,7 @@
 			</a>
 
 		</div>
-		<div class="redbutton_div">
+		<div class="redbutton_div" id= "buttonmove2">
 
 			<!-- a element will link to the target page -->
 			<a href="forestdeeper3.html">
