--- a/instructions.html
+++ b/instructions.html
@@ -19,7 +19,7 @@
 			<!-- <h1>Monster Island Extreme</h1> -->
 			<h2> INSTRUCTIONS </h2>
 			<p> Two ways to win the game: </p>
-			<p>Find materials (4) to make a raft and sail away!! </p>
+			<p>Find materials (4) to make a boat and sail away!! </p>
 			
 			<p>A secret way is hidden in the game. </p>
 			<p>Find it to get rescued and win immediately!!</p>
