--- a/nothing2.html
+++ b/nothing2.html
@@ -18,7 +18,7 @@
 		<div class="title_div text_box2">
 			<!-- <h1>Monster Island Extreme</h1> -->
 			<p> womp womp womp... I found nothing.. wait..</p>
-			<p> I see something... what is that in the distance?</p>
+			<p> ...what is that in the distance?</p>
 			
 			
 		</div>
