--- a/forestdeeper2.html
+++ b/forestdeeper2.html
@@ -13,7 +13,9 @@
 	<div class="game_wrapper titleScreen full_bg_img" style="background-image: url(./resources/media/images/leafre6.png);">
 
 		
-
+		<div>
+		<embed src="./resources/media/audio/start.mp3" loop="true" hidden="true" autostart="true">
+		</div>
 		<!-- div for button that go to the question.html -->
 		<div class="title_div text_box2">
 			<!-- <h1>Monster Island Extreme</h1> -->
