--- a/chick.html
+++ b/chick.html
@@ -12,7 +12,9 @@
 	<!-- the full screen game container div -->
 	<div class="game_wrapper titleScreen full_bg_img" style="background-image: url(./resources/media/images/beach.png);">
 
-		
+		<div>
+		<embed src="./resources/media/audio/battle.mp3" loop="true" hidden="true" autostart="true">
+		</div>
 
 		<!-- div for button that go to the question.html -->
 		<div class="title_div text_box2">
