--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 	<div class="game_wrapper titleScreen full_bg_img" style="background-image: url(./resources/media/images/opening.jpg);">
 
 		<!-- div for title in the center of the page -->
-	
-
+		<div>
+		<embed src="./resources/media/audio/intro.mp3" loop="true" hidden="true" autostart="true">
+		</div>
+		
 		<!-- div for button that go to the question.html -->
 		<div class="button_div">
 
